# AgentTool-bench

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/: audit_playbook.txt  cache_lookup_note.txt  customer_audit_note.txt  incident_brief.txt  invoice_casebook.txt  invoice_lookup.txt  lookup_request.txt  ops_triage_hint.txt  owner_directory.txt  stale_platform_roster.txt  team_lookup_note.txt
docs/: ablation_guide.md  architecture.mmd  benchmark_methodology.md  demo.md  failure_taxonomy.md  one_pager.md  project_roadmap.md  trajectory_reading_guide.md
scripts/: make_data.py  make_demo_screenshots.sh  run_benchmark.sh  run_minimal_demo.py  run_single_task.sh
src/autotoolbench/: __init__.py  __main__.py  cli.py  constants.py  data_gen.py
src/autotoolbench/agent/: __init__.py  adaptive_agent.py  budget.py  executor.py  json_utils.py  planner.py  react_baseline.py  reflector.py  safety.py  schema.py
src/autotoolbench/eval/: __init__.py  ablation.py  metrics.py  replay.py  report.py  runner.py
src/autotoolbench/llm/: base.py  mock.py  openai_client.py
src/autotoolbench/retrieval/: __init__.py  lightweight.py
src/autotoolbench/tools/: __init__.py  base.py  doc_search_tool.py  file_tool.py  log_tool.py  noop_tool.py  python_tool.py  registry.py  run_tests_tool.py  sqlite_tool.py
tests/: test_agent.py  test_agent_extra.py  test_eval.py  test_tools.py
(+2 files in other folders)
